[project]
name = "python-return-youtube-dislike"
version = "1.1.4"
authors = [
  { name="Sean-e", email="seane410@gmail.com" },
]
description = "A simple Python library to interact with the Return YouTube Dislike API"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JrGamer410/Python-Return-YouTube-Dislike"
Issues = "https://github.com/JrGamer410/Python-Return-YouTube-Dislike/issues"